# LogBee

./: Cargo.toml  LICENSE  README.md  README_JP.md  build.rs  build_installer.ps1  logbee.spec  setup.iss
.github/workflows/: release.yml
installer/deb/: control
installer/rpm/: logbee.spec
installer/windows/: setup.iss
src/: main.rs
