[package]
name = "logbee"
version = "0.5.0"
edition = "2024"
description = "A terminal-based log viewer built with Rust, utilizing DuckDB for efficient log querying and Ratatui for a rich terminal UI experience."
license = "MIT"

[dependencies]
crossterm = "0.29"
duckdb = { version = "=1.3.2", features = ["bundled"] }
ratatui = "0.30"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"